# piano-transcriber

./: .env.example  .gitignore  README.md  eslint.config.js  index.html  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
docs/superpowers/plans/: 2026-05-22-piano-transcriber.md  2026-05-23-ireal-chords.md
docs/superpowers/specs/: 2026-05-22-piano-transcriber-design.md  2026-05-23-hand-separation-design.md  2026-05-23-ireal-chords-design.md  (+1 more)
python/: classify_hands.py  main.py  pyproject.toml  requirements.txt  test_classify_hands.json  test_classify_hands.py  test_main.py
src/: agent.test.ts  agent.ts  anthropic-agent.ts  client.ts  context.ts  eval-utils.ts  index.ts  markdown-middleware.ts  mcp-client.ts  mcp-server.ts  memory.ts  middleware.ts  openai-agent.ts  orchestrator.ts  otel-middleware.ts  tool.ts  types.ts  web-search-tool.ts  workflow.ts
src/agents/: analysis-agent.ts  cleanup-agent.ts  editor-agent.ts  improv-feedback-agent.ts  renderer-agent.ts  transcription-agent.ts
src/pipeline/: run-pipeline.ts  types.ts
src/server/: job-store.test.ts  job-store.ts  server.ts
src/tools/: apply-operations-tool.test.ts  apply-operations-tool.ts  classify-hands.test.ts  classify-hands.ts  extract-features-tool.test.ts  extract-features-tool.ts  feedback-tool.ts  flag-suspicious-tool.test.ts  flag-suspicious-tool.ts  inject-harmonies.test.ts  inject-harmonies.ts  parse-chords.test.ts  parse-chords.ts  parse-midi.ts  render-tool.ts  transcribe-tool.test.ts  transcribe-tool.ts
src/ui/: App.tsx  index.css  main.tsx
(+8 files in other folders)
